Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48088

Crash on shutdown in ~QQuickWebEngineDownloadItem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.6.0 Alpha
    • WebEngine
    • None
    • 003924d46e5f886eca1fa3f

    Description

      00 Qt5WebEngined!QGenericAtomicOps<QAtomicOpsBySize<4> >::load<int>(int * _q_value = 0xdddddddd)+0x6
      01 Qt5WebEngined!QBasicAtomicInteger<int>::load(void)+0x10
      02 Qt5WebEngined!QtPrivate::RefCount::isShared(void)+0x11
      03 Qt5WebEngined!QMap<unsigned int,QPointer<QQuickWebEngineDownloadItem> >::detach(void)+0x11
      04 Qt5WebEngined!QMap<unsigned int,QPointer<QQuickWebEngineDownloadItem> >::remove(unsigned int * akey = 0x0100f7d8)+0x11
      05 Qt5WebEngined!QQuickWebEngineProfilePrivate::downloadDestroyed(unsigned int downloadId = 1)+0x16
      06 Qt5WebEngined!QQuickWebEngineDownloadItemPrivate::~QQuickWebEngineDownloadItemPrivate(void)+0x19
      07 Qt5WebEngined!QQuickWebEngineDownloadItemPrivate::`scalar deleting destructor'(void)+0xf
      08 Qt5WebEngined!QScopedPointerDeleter<QQuickWebEngineDownloadItemPrivate>::cleanup(class QQuickWebEngineDownloadItemPrivate * pointer = 0x27e5ab78)+0x22
      09 Qt5WebEngined!QScopedPointer<QQuickWebEngineDownloadItemPrivate,QScopedPointerDeleter<QQuickWebEngineDownloadItemPrivate> >::~QScopedPointer<QQuickWebEngineDownloadItemPrivate,QScopedPointerDeleter<QQuickWebEngineDownloadItemPrivate> >(void)+0x1a
      0a Qt5WebEngined!QQuickWebEngineDownloadItem::~QQuickWebEngineDownloadItem(void)+0x1b
      0b Qt5WebEngined!QQuickWebEngineDownloadItem::`vector deleting destructor'(void)+0x4d
      0c Qt5Cored!QObjectPrivate::deleteChildren(void)+0xc9
      0d Qt5Cored!QObject::~QObject(void)+0x51a
      0e Qt5WebEngined!QQuickWebEngineProfile::~QQuickWebEngineProfile(void)+0x24
      0f Qt5WebEngined!QQuickWebEngineProfile::`vector deleting destructor'(void)+0x4d
      10 Qt5Cored!QObjectPrivate::deleteChildren(void)+0xc9
      11 Qt5Cored!QObject::~QObject(void)+0x51a
      12 Qt5WebEngineCored!QObject::`scalar deleting destructor'(void)+0x1a
      13 Qt5WebEngineCored!WebEngineContext::destroy(void)+0x44
      14 Qt5WebEngineCored!`anonymous namespace'::destroyContext(void)+0x14
      15 Qt5Cored!qt_call_post_routines(void)+0x86
      16 Qt5Cored!QCoreApplication::~QCoreApplication(void)+0x44
      17 Qt5Guid!QGuiApplication::~QGuiApplication(void)+0x175
      18 quickdemo!main(int argc = 0n1, char ** argv = 0x012ca970)+0xd9
      19 quickdemo!WinMain(struct HINSTANCE__ * __formal = 0x002b0000)+0xad
      1a quickdemo!__tmainCRTStartup(void)+0x23f
      1b quickdemo!WinMainCRTStartup(void)+0xd
      WARNING: Stack unwind information not available. Following frames may be wrong.
      1c KERNEL32!BaseThreadInitThunk+0x24
      1d ntdll_76ed0000!RtlSetCurrentTransaction+0xd4
      1e ntdll_76ed0000!RtlSetCurrentTransaction+0x9f
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes