Break destruction cycle between DownloadItem and WebEngineProfile

All QQWebEngineDownloadItem objects are destructed as child objects
of QQWebEngineProfile. However, they try to 'call back' to the
already half-destructed QQWebEngineProfile object to unregister
themselves.

Avoid this by tracking the lifetime of the QWebEngineProfile with
a QPointer.

Task-number: QTBUG-48088
Change-Id: Ie6a76440ad9f37d7cbc38b4ce35bf5da785d0e2a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>